Ensure the tag is also reset on model reset

BUG: 446702